k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-go-service
spec:
  selector:
    app: api-go
  ports:
    - port: 80
      targetPort: 8080
